# digilo_utils

./: .cproject  .project  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
digilo_utils_lib/: CMakeLists.txt
digilo_utils_lib/src/: CShmBase.cpp  CShmBase.h  CShmDictionary.cpp  CShmDictionary.h  common_utils.h  file_utils.cpp  file_utils.h  log.cpp  log.h  terminal_codes.h
digilo_utils_test/: CMakeLists.txt
digilo_utils_test/src/: CShmBase_Test.cpp  FileUtils_Test.cpp  Log_test.cpp  ShmDictionary_test.cpp
gtest/: CMakeLists.txt
gtest/src/: gtest_main.cc
